--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
 </head>
 <body>
 <i><b>hello this is both bold and itallic</b></i>
+<sup>This is superscript</sup>
+<sub>this is subscript</sub>
+<strong>this is strong</strong>
 </body>
 </html>
