--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
     <title>Luke Rogan - Semantic Elements in HTML</title>
 </head>
 <body>
+<p>
+  address - Website Created By: Luke Rogan
+    <br>
+    Portfolio: [Link to your website]
+    <br>
+    Contact Us: [Phone Number Here]
+    <br>
+    Visit Us: [School Address Here]    
+<br>
 <i><b>hello this is both bold and itallic</b></i>
+<br>
 <sup>This is superscript</sup>
 <sub>this is subscript</sub>
+<br>
 <strong>this is strong</strong>
+<br>
+Emphasis - Look at me, I'm Chandler. Could I <i>BE</i> wearing any more clothes?!
+<br>
+Abbreviation - <b>BRB NBD USA</b>
+<br>
+Citation - <img src="img/scream.jpg" alt="scream" width="500">
+<br>
+ The Scream by Edward Munch. Painted in 1893.
+ <br>
+ <dfn><abbr title="Hypertext Markup Language">HTML</abbr></dfn> is the standard markup language for creating web pages.
+</p>
 </body>
 </html>
