--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@ Citation - <img src="img/scream.jpg" alt="scream" width="500">
  The Scream by Edward Munch. Painted in 1893.
  <br>
  <dfn><abbr title="Hypertext Markup Language">HTML</abbr></dfn> is the standard markup language for creating web pages.
+ <br>
+ Confusion is part of programming.
+ <br>-Felienne Hermans
+ <br>
+ <q>All our work, our whole life is a matter of semantics, because words are the tools with which we work, the material out of which laws are made, out of which the Constitution was written. Everything depends on our understanding of them.</q>
 </p>
 </body>
 </html>
