added <em>, <blockquote>, and<address>

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 </head>
 <body>
 <p>
-  address - Website Created By: Luke Rogan
+  <address>address - Website Created By: Luke Rogan
     <br>
     Portfolio: [Link to your website]
     <br>
     Contact Us: [Phone Number Here]
     <br>
-    Visit Us: [School Address Here]    
+    Visit Us: [School Address Here]</address>
 <br>
 <i><b>hello this is both bold and itallic</b></i>
 <br>
@@ -20,9 +20,9 @@
 <br>
 <strong>this is strong</strong>
 <br>
-Emphasis - Look at me, I'm Chandler. Could I <i>BE</i> wearing any more clothes?!
+Emphasis - Look at me, I'm Chandler. Could I <em>BE</em> wearing any more clothes?!
 <br>
-Abbreviation - <b>BRB NBD USA</b>
+Abbreviation - <abbr title="United States of America">USA</abbr>
 <br>
 Citation - <img src="img/scream.jpg" alt="scream" width="500">
 <br>
@@ -30,10 +30,10 @@ Citation - <img src="img/scream.jpg" alt="scream" width="500">
  <br>
  <dfn><abbr title="Hypertext Markup Language">HTML</abbr></dfn> is the standard markup language for creating web pages.
  <br>
- Confusion is part of programming.
+ <q>Confusion is part of programming.</q>
  <br>-Felienne Hermans
  <br>
- <q>All our work, our whole life is a matter of semantics, because words are the tools with which we work, the material out of which laws are made, out of which the Constitution was written. Everything depends on our understanding of them.</q>
+ <blockquote>All our work, our whole life is a matter of semantics, because words are the tools with which we work, the material out of which laws are made, out of which the Constitution was written. Everything depends on our understanding of them.</blockquote>
 </p>
 </body>
 </html>
