restructured and a lot of other stuff

--- a/index.html
+++ b/index.html
@@ -5,14 +5,6 @@
 </head>
 <body>
 <p>
-  <address>address - Website Created By: Luke Rogan
-    <br>
-    Portfolio: [Link to your website]
-    <br>
-    Contact Us: [Phone Number Here]
-    <br>
-    Visit Us: [School Address Here]</address>
-<br>
 <i><b>hello this is both bold and itallic</b></i>
 <br>
 <sup>This is superscript</sup>
@@ -20,20 +12,28 @@
 <br>
 <strong>this is strong</strong>
 <br>
-Emphasis - Look at me, I'm Chandler. Could I <em>BE</em> wearing any more clothes?!
+Look at me, I'm Chandler. Could I <em>BE</em> wearing any more clothes?!
 <br>
-Abbreviation - <abbr title="United States of America">USA</abbr>
+<abbr title="United States of America">USA</abbr>
 <br>
-Citation - <img src="img/scream.jpg" alt="scream" width="500">
+<dfn><abbr title="Hypertext Markup Language">HTML</abbr></dfn> is the standard markup language for creating web pages.
 <br>
- The Scream by Edward Munch. Painted in 1893.
+<q>Confusion is part of programming.</q>
+<br>-Felienne Hermans
+<br>
+<blockquote>All our work, our whole life is a matter of semantics, because words are the tools with which we work, the material out of which laws are made, out of which the Constitution was written. Everything depends on our understanding of them.</blockquote>
+<br>
+<img src="img/scream.jpg" alt="scream" width="500">
+<br>
+ <cite>The Scream</cite> by Edward Munch. Painted in 1893.
  <br>
- <dfn><abbr title="Hypertext Markup Language">HTML</abbr></dfn> is the standard markup language for creating web pages.
- <br>
- <q>Confusion is part of programming.</q>
- <br>-Felienne Hermans
- <br>
- <blockquote>All our work, our whole life is a matter of semantics, because words are the tools with which we work, the material out of which laws are made, out of which the Constitution was written. Everything depends on our understanding of them.</blockquote>
+ <address>Website Created By: Luke Rogan
+  <br>
+  Portfolio: 
+  <br>
+  Contact Us: 732-***-****
+  <br>
+  Visit Us:</address>
 </p>
 </body>
 </html>
